tests/type_only_vars/type_only_vars.exp
Error ---------------------------------------------------- bad_shadowing.js:13:5

Cannot declare `A` because the name is already bound.

Error: bad_shadowing.js:13
 13: var A: string = "Hello";
         ^ Cannot declare `A` [1] because the name is already bound.
  References:
    5: import typeof A from "./A.js";
                     ^ [1]: `A`

Error ---------------------------------------------------- bad_shadowing.js:14:5

Cannot declare `Foo` because the name is already bound.

Error: bad_shadowing.js:14
 14: var Foo: string = "Goodbye";
         ^^^ Cannot declare `Foo` [1] because the name is already bound.
  References:
    6: import type {Foo, Bar as Baz} from "./A.js";
                    ^^^ [1]: `Foo`

Error ---------------------------------------------------- bad_shadowing.js:15:5

Cannot declare `Baz` because the name is already bound.

Error: bad_shadowing.js:15
 15: var Baz: string = "Go away please";
         ^^^ Cannot declare `Baz` [1] because the name is already bound.
  References:
    6: import type {Foo, Bar as Baz} from "./A.js";
                         ^^^^^^^^^^ [1]: `Baz`

Error ---------------------------------------------------- bad_shadowing.js:18:5

Cannot declare `duck` because the name is already bound.

Error: bad_shadowing.js:18
 18: var duck: string = "quack";
         ^^^^ Cannot declare `duck` [1] because the name is already bound.
  References:
    8: type duck = {
            ^^^^ [1]: `duck`

Error ---------------------------------------------------- good_shadowing.js:8:5

Cannot declare `A` because the name is already bound.

Error: good_shadowing.js:8
  8: var A = require('./A.js');
         ^ Cannot declare `A` [1] because the name is already bound.
  References:
    5: import typeof A from "./A.js";
                     ^ [1]: `A`

Error ---------------------------------------------------- good_shadowing.js:9:5

Cannot declare `Foo` because the name is already bound.

Error: good_shadowing.js:9
  9: var Foo = A.Foo;
         ^^^ Cannot declare `Foo` [1] because the name is already bound.
  References:
    6: import type {Foo, Bar as Baz} from "./A.js";
                    ^^^ [1]: `Foo`

Error --------------------------------------------------- good_shadowing.js:9:11

Cannot reference type `A` from a value position.

Error: good_shadowing.js:9
  9: var Foo = A.Foo;
               ^ Cannot reference type `A` [1] from a value position.
  References:
    5: import typeof A from "./A.js";
                     ^ [1]: `A`

Error --------------------------------------------------- good_shadowing.js:10:5

Cannot declare `Baz` because the name is already bound.

Error: good_shadowing.js:10
 10: var Baz = A.Bar;
         ^^^ Cannot declare `Baz` [1] because the name is already bound.
  References:
    6: import type {Foo, Bar as Baz} from "./A.js";
                         ^^^^^^^^^^ [1]: `Baz`

Error -------------------------------------------------- good_shadowing.js:10:11

Cannot reference type `A` from a value position.

Error: good_shadowing.js:10
 10: var Baz = A.Bar;
               ^ Cannot reference type `A` [1] from a value position.
  References:
    5: import typeof A from "./A.js";
                     ^ [1]: `A`

Error --------------------------------------------------- good_shadowing.js:13:9

Cannot reference type `A` from a value position.

Error: good_shadowing.js:13
 13: var m = A;
             ^ Cannot reference type `A` [1] from a value position.
  References:
    5: import typeof A from "./A.js";
                     ^ [1]: `A`

Error --------------------------------------------------- good_shadowing.js:14:9

Cannot reference type `Foo` from a value position.

Error: good_shadowing.js:14
 14: var n = Foo;
             ^^^ Cannot reference type `Foo` [1] from a value position.
  References:
    6: import type {Foo, Bar as Baz} from "./A.js";
                    ^^^ [1]: `Foo`

Error --------------------------------------------------- good_shadowing.js:15:9

Cannot reference type `Baz` from a value position.

Error: good_shadowing.js:15
 15: var o = Baz;
             ^^^ Cannot reference type `Baz` [1] from a value position.
  References:
    6: import type {Foo, Bar as Baz} from "./A.js";
                         ^^^^^^^^^^ [1]: `Baz`

Error -------------------------------------------------- good_shadowing.js:18:18

Cannot reference type `Foo` from a value position.

Error: good_shadowing.js:18
 18: var a: Foo = new Foo();
                      ^^^ Cannot reference type `Foo` [1] from a value position.
  References:
    6: import type {Foo, Bar as Baz} from "./A.js";
                    ^^^ [1]: `Foo`

Error -------------------------------------------------- good_shadowing.js:19:18

Cannot reference type `A` from a value position.

Error: good_shadowing.js:19
 19: var b: Foo = new A.Foo();
                      ^ Cannot reference type `A` [1] from a value position.
  References:
    5: import typeof A from "./A.js";
                     ^ [1]: `A`

Error --------------------------------------------------- good_shadowing.js:20:6

Cannot reference type `A` from a value position.

Error: good_shadowing.js:20
 20: (new A.Bar(): Baz);
          ^ Cannot reference type `A` [1] from a value position.
  References:
    5: import typeof A from "./A.js";
                     ^ [1]: `A`

Error ------------------------------------------------------ import_type.js:11:9

Cannot reference type `A` from a value position.

Error: import_type.js:11
 11: var m = A;
             ^ Cannot reference type `A` [1] from a value position.
  References:
    5: import typeof A from "./A.js";
                     ^ [1]: `A`

Error ------------------------------------------------------ import_type.js:12:9

Cannot reference type `Foo` from a value position.

Error: import_type.js:12
 12: var n = Foo;
             ^^^ Cannot reference type `Foo` [1] from a value position.
  References:
    6: import type {Foo, Bar as Baz} from "./A.js";
                    ^^^ [1]: `Foo`

Error ------------------------------------------------------ import_type.js:13:9

Cannot reference type `Baz` from a value position.

Error: import_type.js:13
 13: var o = Baz;
             ^^^ Cannot reference type `Baz` [1] from a value position.
  References:
    6: import type {Foo, Bar as Baz} from "./A.js";
                         ^^^^^^^^^^ [1]: `Baz`

Error -------------------------------------------------------- type_alias.js:8:9

Cannot reference type `Foo` from a value position.

Error: type_alias.js:8
  8: var x = Foo;
             ^^^ Cannot reference type `Foo` [1] from a value position.
  References:
    5: type Foo = number;
            ^^^ [1]: `Foo`


Found 19 errors
